--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="Build/IMMD_WebGL.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/IMMD_WebGL.data.gz",
-        frameworkUrl: "Build/IMMD_WebGL.framework.js.gz",
-        codeUrl: "Build/IMMD_WebGL.wasm.gz",
+        dataUrl: "Build/IMMD_WebGL.data.unityweb",
+        frameworkUrl: "Build/IMMD_WebGL.framework.js.unityweb",
+        codeUrl: "Build/IMMD_WebGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "IMMD_2D",
