--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" style="width: 800px; height: 500px; background: #231F20"></canvas>
-    <script src="Build/2DIMMDBuild.loader.js"></script>
+    <script src="Build/IceMonstersMustDie.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/2DIMMDBuild.data.unityweb",
-        frameworkUrl: "Build/2DIMMDBuild.framework.js.unityweb",
-        codeUrl: "Build/2DIMMDBuild.wasm.unityweb",
+        dataUrl: "Build/IceMonstersMustDie.data.unityweb",
+        frameworkUrl: "Build/IceMonstersMustDie.framework.js.unityweb",
+        codeUrl: "Build/IceMonstersMustDie.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "IMMD_2D",
